--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         DEV_PROJECT = "jsubbiah-movies-dev"
         STAGE_PROJECT = "jsubbiah-movies-stage"
         APP_GIT_URL = "https://github.com/jsubbiah/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/java"
+        NEXUS_SERVER = "http://nexus-common.apps.na45.prod.nextcle.com/repository/java"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "movies"
