--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -84,7 +84,7 @@ pipeline {
                 }
                 // TODO: Create a new OpenShift application based on the ${APP_NAME}:latest image stream
     sh '''
-            oc new-app -i ${APP_NAME} --name ${APP_NAME} -n ${DEV_PROJECT}
+            oc new-app --as-deployment-config -i ${APP_NAME} --name ${APP_NAME} -n ${DEV_PROJECT}
              oc expose svc ${APP_NAME} -n ${DEV_PROJECT}
           '''
             }
@@ -134,7 +134,7 @@ pipeline {
                 echo '### Creating a new app in Staging ###'
                 // TODO: Create a new app in staging and expose the service
                 sh '''
-                   oc new-app -i ${DEV_PROJECT/${APP_NAME}:latest --name ${APP_NAME} -n     ${STAGE_PROJECT}
+                   oc new-app --as-deployment-config -i ${DEV_PROJECT/${APP_NAME}:latest --name ${APP_NAME} -n     ${STAGE_PROJECT}
                    oc expose svc ${APP_NAME} -n ${STAGE_PROJECT}
                   '''
             }
